--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -5,5 +5,6 @@
 
 {% block content %}
 <h1>Welcome: <span id="result"></span></h1>
+<a href="/logout/" class="text-green-700 bold">Logout</a>
 <script src="{% static 'main.js' %}"></script>
 {% endblock %}
